@@ -10,14 +10,15 @@ import { Id, Obj, Optional } from '@ephox/katamari';
 export type UriMap = Record<string, string>;
 
 export interface Base64Extract {
-  prefix: string;
-  uris: UriMap;
-  html: string;
+  readonly prefix: string;
+  readonly uris: UriMap;
+  readonly html: string;
+  readonly re: RegExp;
 }
 
 export interface Base64UriParts {
-  type: string;
-  data: string;
+  readonly type: string;
+  readonly data: string;
 }
 
 export const extractBase64DataUris = (html: string): Base64Extract => {
@@ -43,18 +44,22 @@ export const extractBase64DataUris = (html: string): Base64Extract => {
     index = matches.index + uri.length;
   }
 
+  const re = new RegExp(`${prefix}_[0-9]+`, 'g');
   if (index === 0) {
-    return { prefix, uris, html };
+    return { prefix, uris, html, re };
   } else {
     if (index < html.length) {
       chunks.push(html.substr(index));
     }
 
-    return { prefix, uris, html: chunks.join('') };
+    return { prefix, uris, html: chunks.join(''), re };
   }
 };
 
-export const restoreDataUris = (html: string, result: Base64Extract) => html.replace(new RegExp(`${result.prefix}_[0-9]+`, 'g'), (imageId) => Obj.get(result.uris, imageId).getOr(imageId));
+export const restoreDataUris = (html: string, result: Base64Extract) =>
+  html.replace(result.re, (imageId) =>
+    Obj.get(result.uris, imageId).getOr(imageId)
+  );
 
 export const parseDataUri = (uri: string): Optional<Base64UriParts> => {
   const matches = /data:([^;]+);base64,([a-z0-9\+\/=]+)/i.exec(uri);
